# whatsapp-business-bot-standart

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.ps1  docker-compose.yml  pyproject.toml
examples/gemini/: gemini_request.py
examples/gmail/: send_email.py
examples/wa_business/: flows.py  index.md  send_messages.py  upload_media.ipynb  webhook.py
src/app/: __init__.py  logger.py  settings.py
src/app/client_session/: __init__.py  shutdown.py  startup.py
src/app/client_session/messages/: audio.py  base.py  contact.py  cta_url_button.py  document.py  image.py  interactive_list.py  mark_read.py  text.py  video.py
src/app/client_session/messages/models/: audio.py  base.py  button.py  contact.py  cta_url_button.py  document.py  image.py  interactive_list.py  mark_read.py  template.py  text.py  video.py
src/app/client_session/services/: genai.py
src/app/data_base/: startup.py
src/app/data_base/db_helper/: core.py  crud.py
src/app/data_base/models/: __init__.py  base.py  convo.py  user.py
src/app/events/: __init__.py  shutdown.py  startup.py
src/app/middleware/: __init__.py  resquest_id.py
src/app/routes/: __init__.py  check_signature.py
src/app/routes/home/: __init__.py
src/app/routes/webhook/: __init__.py  handler.py
src/app/routes/webhook/categorize/: payload.py
src/app/routes/webhook/categorize/messages/: adds.py  (+16 more)
src/app/routes/webhook/models/: contacts.py  payload.py
src/app/scripiter/: __init__.py
src/app/scripiter/models/: __init__.py  airesponse.py  other.py  redirecter.py  unasus.py  user.py  welcome.py
(+31 files in other folders)
